# liveness-detection-for-backend

./: .flake8  .gitignore  Jenkinsfile  LICENSE  README.md
.github/workflows/: flake8.yml
Common/: README.md  pyproject.toml  run.py
Common/ai-common/google/storage/: gs.py
Common/config/: common.yaml
Common/test/google/storage/: test_gs.py
Eval_Deploy/: .flake8  .gitignore  deploy_sunglasses.sh  eval_hive.py  evaluate_and_deploy.py  evaluate_and_deploy_pytorch.py  hive_label_count.py  prediction.json  pyproject.toml  requirements.txt  test.json  up_wandb.py  up_wandb_daterange.py  util.py  wandb_daily.sh  wandb_sunglasses.sh
Eval_Deploy/tests/: test_utils.py
POC/Clustering/: Dockerfile  app.py  requirements.txt
POC/Filtering/server/: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  uvicorn.sh
POC/Filtering/server/app/: dependencies.py  settings.json  settings2.json
POC/Filtering/server/app/constants/: localisation.py  settings.py  user.py  you_profile.py
POC/Filtering/server/app/domain/score_settings/: __init__.py  score_settings.py  score_settings_exception.py  score_settings_repository.py
POC/Filtering/server/app/domain/user/: __init__.py  user.py  user_exception.py  user_repository.py
POC/Filtering/server/app/domain/user_interactions/: __init__.py  user_interactions.py  user_interactions_exception.py  user_interactions_repository.py
POC/Filtering/server/app/domain/you_profile/: __init__.py  you_profile.py  you_profile_exception.py  you_profile_repository.py
POC/Filtering/server/app/infrastructure/elasticsearch/: database.py  elasticsearch-ca.pem
POC/Filtering/server/app/infrastructure/elasticsearch/user/: __init__.py  user_builder.py  user_dto.py  user_query_service.py  user_repository.py
POC/Filtering/server/app/infrastructure/elasticsearch/you_profile/: __init__.py  you_profile_builder.py  you_query_service.py
POC/Filtering/server/app/infrastructure/local_file_system/score_settings/: __init__.py  score_settings_repository.py
POC/Filtering/server/app/infrastructure/mongo/: database.py
POC/Filtering/server/app/infrastructure/mongo/user/: __init__.py  user_query_service.py  user_repository.py
POC/Filtering/server/app/infrastructure/mongo/user_interactions/: __init__.py  user_interactions_repository.py
POC/Filtering/server/app/infrastructure/mongo/you_profile/: __init__.py  you_profile_repository.py
POC/Filtering/server/app/presentation/schema/score_settings/: __init__.py  score_settings_error_message.py
POC/Filtering/server/app/presentation/schema/user/: user_batch_input.py  user_error_message.py
POC/Filtering/server/app/routers/: settings.py
POC/Filtering/server/app/routers/users/: __init__.py  injectors.py  user.py  user_jobs.py
POC/Filtering/server/app/routers/you_profiles/: __init__.py  injectors.py  you_profile.py
POC/Filtering/server/app/usecase/score_settings/: __init__.py  score_setting_query_usecase.py
POC/Filtering/server/app/usecase/user/: __init__.py  user_query_model.py  user_query_service.py  user_query_usecase.py  user_ranking_usecase.py
POC/Filtering/server/app/usecase/you_profile/: __init__.py  you_profile_query_service.py  you_profile_usecase.py
POC/Filtering/server/app/utils/: age.py  dict.py  distance.py  number.py  rad_2_deg.py
POC/Filtering/server/tests/: test_search.py
POC/LanguageIdentification/: Dockerfile  README.md  app.py  docker-compose.yml  model.py  pyproject.toml  settings.toml  uvicorn.sh
POC/LivenessDetection/server/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
POC/LivenessDetection/server/constants/: settings.py
POC/Matching/: Dockerfile  Dockerfile_ranking  Dockerfile_retrieval  README.md  app.py  config.py  docker-compose.yml  downloader.py  models.config  pyproject.toml  run_coverage.sh  run_docker.sh  run_test.sh  settings.toml
POC/Matching/client/public/: index.html
POC/Matching/client/src/: App.js
POC/Matching/client/src/hooks/: useDebounce.js
POC/clean_arch/: downloader.py  get-poetry.py  main.py  pyproject.toml
Pipelines/mek_photos_to_gs/: .dockerignore  Dockerfile  mek_to_gs.py  requirements.txt
Pipelines/private/: private_downloader.py  pyproject.toml
Serving/: docker-compose.yml
Serving/server/: Dockerfile  README.md  main.py  pyproject.toml
Serving/server/app/constants/: settings.py
Serving/server/app/dtos/: predictor_response.py
Serving/server/app/face/: classify.py
Serving/server/app/libs/: model_mapping.py  predictor.py
Serving/server/app/person/: detect.py
Serving/server/app/utils/: image.py
Serving/tf_serving/: Dockerfile  models.config
Train/: README.txt
Train/efficientnet_trainer/: Dockerfile  data_loader.py  jobs.py  model.py  model_abstract.py  model_factory.py  task.py  (+2 more)
(+69 files in other folders)
