[tool.poetry]
name = "ai-common"
version = "0.1.0"
description = "Common package for python projects"
authors = ["carltechiz <carl@opentechiz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
google-cloud-storage = "^1.42.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
black = "^21.8b0"
pytest = "^6.2.4"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
