[tool.poetry]
name = "Language identification"
version = "0.1.0"
description = "Language identification FastAPI server"
authors = ["harry"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
fastapi-jwt-auth = "^0.5.0"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
fasttext = "^0.9.2"
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
pytest-black = "^0.3.12"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
