[tool.poetry]
name = "matching"
version = "0.1.0"
description = "Matching inference FastAPI server"
authors = ["harry"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
dynaconf = "^3.1.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
fastapi-jwt-auth = "^0.5.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
elasticsearch = "7.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
pytest-black = "^0.3.12"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
